--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Average&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/3a3b0ac8a1.js" crossorigin="anonymous"></script>
     </head>
 <body class="body">
 
@@ -17,6 +18,9 @@
                 <a href="portffolio.html">Portfolio</a>
                 <a href="../UX_UI_HW_17/aboutme.html">About</a>
                 <a href="resume">Resume</a>
+        </div>
+        <div class="rightNavAlt">
+            <img src="images/menu.png">
         </div>
         <button class= "contactme"><a href="mailto:lauren.tofflemire@gmail.com">Contact Me</a></button> 
     </header>
