--- a/portffolio.html
+++ b/portffolio.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Average&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/3a3b0ac8a1.js" crossorigin="anonymous"></script>
     </head>
 <body class="body">
     <header class="navigation">
@@ -18,8 +19,11 @@
                 <a href="mywork.html">Portfolio</a>
                 <a href="aboutme.html">About</a>
                 <a href="resume">Resume</a> 
-                <button class= "contactme"><a href="mailto:lauren.tofflemire@gmail.com">Contact Me</a></button> 
         </div>
+        <div class="rightNavAlt">
+            <img src="images/menu.png" width="40">
+        </div>
+        <button class= "contactme"><a href="mailto:lauren.tofflemire@gmail.com">Contact Me</a></button> 
 
     </header>
 
